--- a/.github/workflows/docker-afvalstoffendienst-to-ical.yml
+++ b/.github/workflows/docker-afvalstoffendienst-to-ical.yml
@@ -1,10 +1,6 @@
 name: Generate & Push docker rikmeijer/afvalstoffendienst-to-ical images, which can be used as bases for other php nostr projects
 
-on:
-  workflow_run:
-    workflows: [Tests]
-    types:
-      - completed
+on: ['push', 'pull_request']
 
 env:
   REGISTRY_IMAGE: rikmeijer/afvalstoffendienst-to-ical
