fix Dockerfile location

--- a/.github/workflows/docker-afvalstoffendienst-to-ical.yml
+++ b/.github/workflows/docker-afvalstoffendienst-to-ical.yml
@@ -47,7 +47,7 @@ jobs:
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},name-canonical=true,push=true
-          file: docker/Dockerfile
+          file: Dockerfile
           tags: ${{ env.REGISTRY_IMAGE }}:latest
       
       - name: Export digest
